<resources>
    <string name="app_name">CarroControl</string>
    <string name="title_activity_frame_layout">FrameLayoutActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="correoUsuario">Email</string>
    <string name="aviso_privacidad">Acepto avíso de privacidad</string>
    <string name="label_select_auto">Selecciona un Automóvil:</string>
    <string name="label_nacionalidad">Nacionalidad:</string>
    <string name="rb_no_especificar">Unspecified</string>
    <string name="rb_masculino">Male</string>
    <string name="rb_femenino">Female</string>
    <string name="labell_genero">Gender*:</string>
    <string name="hint_seg_ape">Enter your second surname here</string>
    <string name="label_segundo_apellido">Second surname:</string>
    <string name="hint_prim_ape">Enter your last name here</string>
    <string name="label_primer_apellido">First surname*:</string>
    <string name="hint_nombre">Enter your name here</string>
    <string name="label_nombres">First name*:</string>
    <string name="set_bar_fin">Finalización</string>
    <string name="setp_bar_auto">Registro de automovil</string>
    <string name="setp_bar_persona">Registro de usuario</string>
    <string name="titulo_pagina">User register</string>
    <string name="hint_correo_electronico">Enter your email here</string>
    <string name="label_correo_electronico">Email*:</string>
    <string name="textBtnRegistrarUsuario">To register</string>
    <string name="label_titulo_confirmacion">Confirmación de registro</string>
    <string name="label_mensaje_exito">User successfully authenticated</string>
    <string name="text_enviar_url">Enviar URL</string>
    <string name="texto_btn_enviar">Send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="second_titler_fragment">Second way to add fragment</string>
    <string name="text_btn_create_account">Create a new account</string>
    <string name="text_btn_login">Login</string>
    <string name="place_holder_pass_login">Password</string>
    <string name="placeholder_email_login">Email</string>
    <string name="title_name_app">CarroControl</string>
    <string name="text_password_label">Password*:</string>
    <string name="text_placeholder_password_create_accaount">Enter your password here</string>
    <string name="text_label_password_confirm_create_account">Confirm password:</string>
    <string name="txt_placeholder_confirm_pass_create_acc">Enter your password to confirm</string>
    <string name="toast_bad_credentials">Bad credentials.</string>
    <string name="toast_pass_dont_match">Passwords don\'t match, please verify.</string>
    <string name="toast_validation_create_account">Please complete the fields marked with *.</string>
    <string name="text_title_page_home">Authenticated user</string>
</resources>